osd/PG: publish PG stats when backfill-related states change

These frequently get flushed because other updates
happen, but we should explicitly ensure that the mon
sees these state changes.

Fixes: http://tracker.ceph.com/issues/18369
Signed-off-by: Sage Weil <sage@redhat.com>